--- a/Let's_Walk/app/build.gradle
+++ b/Let's_Walk/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "org.techtown.letswalk"
+        applicationId "com.example.letswalk"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -32,9 +32,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.google.android.gms:play-services-maps:18.0.0'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+implementation 'com.google.andorid.material:material:1.4.0.'
+implementation 'com.android.support:design:29.0.0'
