--- a/Let's_Walk/settings.gradle
+++ b/Let's_Walk/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "Let's walk"
+rootProject.name = "Let's Walk"
 include ':app'
